[package]
name = "opentmf-rbac-security-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.9"
http = "1.4.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tower = { version = "0.5.3", features = ["util"] }
tracing = "0.1.44"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.3", features = ["util"] }
